# yamly

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMMIT_INSTRUCTIONS.md  MANIFEST.in  Procfile  README.md  commit_test_fixes.sh  complete_rename.py  complete_rename.sh  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
docs/: .gitkeep  README.md  api_reference.md  api_server.md  ci_cd.md  mcp_server.md
docs/api/: api_server.md  mcp_server.md
docs/developer/: api_reference.md  architecture.md  contributing.md  diffing_algorithms.md
docs/operations/: ci_cd.md  deployment.md  environment_variables.md
docs/user/: examples.md  getting_started.md  installation.md  schema_reference.md
examples/: .gitkeep  README.md  complex_document.yaml  diff_via_api.py  document_v1.yaml  document_v2.yaml  mcp_client_config.json  minimal_document.yaml  minimal_document_no_ids.yaml  template.yaml
scripts/: check.sh  dev-stop.sh  dev.sh  verify_railway_deployment.sh
src/yaml_diffs/: __init__.py  __version__.py  api.py  diff.py  diff_router.py  diff_types.py  exceptions.py  generic_diff.py  generic_diff_types.py  loader.py  security.py  validator.py  yaml_extract.py
src/yaml_diffs/api_server/: __init__.py  config.py  main.py  schemas.py
src/yaml_diffs/cli/: __init__.py  commands.py  main.py  utils.py
src/yaml_diffs/formatters/: __init__.py  _filters.py  generic_text_formatter.py  generic_yaml_formatter.py  text_formatter.py
src/yaml_diffs/mcp_server/: __init__.py  client.py  config.py  server.py  tools.py
src/yaml_diffs/models/: __init__.py  document.py  section.py
src/yaml_diffs/schema/: __init__.py  legal_document_spec.yaml
src/yamly/: __version__.py  diff.py  diff_router.py  diff_types.py  exceptions.py  validator.py
src/yamly/api_server/: config.py  schemas.py
src/yamly/cli/: commands.py  main.py  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_api_integration.py  test_api_server.py  test_cli.py  test_diff.py  test_diff_bugs.py  test_diff_router.py  test_distribution.py  test_edge_cases.py  test_formatters.py  test_generic_diff.py  test_generic_formatters.py  test_imports.py  test_loader.py  test_loader_integration.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_railway_deployment.py  test_schema_validation.py  test_security.py  test_structure.py  test_validator.py
tests/performance/: __init__.py  test_large_documents.py
ui/: .env.example  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/components/: BrandingBubble.tsx  ChangeCard.tsx  ChangePopover.tsx  DemoSection.tsx  DiffSummary.tsx  DiffView.tsx  DiscussionThread.tsx  DocumentationLinks.tsx  DocumentationModal.tsx  ExportButton.tsx  FileUpload.tsx  GenericChangeCard.tsx  HelpModal.tsx  InlineDiscussion.tsx  MarkdownViewer.tsx  MermaidDiagram.tsx  ModeSelector.tsx  OnboardingModal.tsx  SchemaViewer.tsx  SplitDiffView.tsx  Tooltip.tsx  YamlEditor.tsx
ui/examples/: pet_robot_care_v1.yaml  space_taco_truck_v1.yaml
ui/lib/: api.ts  diff-utils.ts  types.ts  yaml-extract.ts
ui/stores/: discussions.ts
(+23 files in other folders)
